--- a/store.html
+++ b/store.html
@@ -6,135 +6,109 @@
   <title>Megu Donni Store</title>
   <link rel="stylesheet" href="styles.css">
   <style>
-    .collection-grid {
+    .thumb {
+      aspect-ratio: 16 / 10;
+      background: #f3f3f3;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 20px;
-      padding: 20px;
+      place-items: center;
     }
-    .collection-card {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      overflow: hidden;
-      text-align: center;
-      transition: transform 0.2s ease;
-    }
-    .collection-card:hover {
-      transform: translateY(-4px);
-    }
-    .collection-card img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    .collection-card h3 {
-      font-size: 18px;
-      margin: 12px 0 8px;
-    }
-    .collection-card a {
-      display: inline-block;
-      padding: 8px 14px;
-      background: #ff4b4b;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 6px;
-      margin-bottom: 14px;
-    }
-    .collection-card a:hover {
-      background: #e63c3c;
+    .thumb img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
     }
   </style>
 </head>
 <body>
 
-<header class="header">
-  <div class="container wrap">
-    <div class="brand">
-      <a href="/"><img src="images/logo.svg" alt="Megu Donni logo"></a>
-      <strong>Megu Donni World</strong>
-    </div>
-    <nav class="nav">
-      <a href="/">Home</a>
-      <a href="/store.html" class="active">Store</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </div>
-</header>
+  <header>
+    <h1>Megu Donni Store</h1>
+    <p>Explore our Redbubble collections — each is filled with unique Megu Donni designs.</p>
+  </header>
 
-<main class="container">
-  <h1 style="margin-top:20px;">Megu Donni Collections</h1>
-  <p>Explore our Redbubble collections — each is filled with unique Megu Donni designs.</p>
+  <main class="collections-grid">
 
-  <div class="collection-grid">
     <div class="collection-card">
-      <img src="images/collections/col-1.jpg" alt="Collection 1">
+      <div class="thumb">
+        <img src="images/collections/col-1.jpg" alt="Underwater Yoga">
+      </div>
       <h3>Underwater Yoga</h3>
-      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328903&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
+      <a class="view-btn" href="#">View Collection</a>
     </div>
+
     <div class="collection-card">
-      <img src="images/collections/col-2.jpg" alt="Collection 2">
+      <div class="thumb">
+        <img src="images/collections/col-2.jpg" alt="Follow Your Dreams">
+      </div>
       <h3>Follow Your Dreams</h3>
-      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328906&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
+      <a class="view-btn" href="#">View Collection</a>
     </div>
+
     <div class="collection-card">
-      <img src="images/collections/col-3.jpg" alt="Collection 3">
+      <div class="thumb">
+        <img src="images/collections/col-3.jpg" alt="Eat Cake Like a Shark">
+      </div>
       <h3>Eat Cake Like a Shark</h3>
-      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328909&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
+      <a class="view-btn" href="#">View Collection</a>
     </div>
+
     <div class="collection-card">
-      <img src="images/collections/col-4.jpg" alt="Collection 4">
-      <h3>Awkward Entrance</h3>
-      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328911&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
+      <div class="thumb">
+        <img src="images/collections/col-4.jpg" alt="Surprised Shark">
+      </div>
+      <h3>Surprised Shark</h3>
+      <a class="view-btn" href="#">View Collection</a>
     </div>
+
     <div class="collection-card">
-      <img src="images/collections/col-5.jpg" alt="Collection 5">
-      <h3>Mom App Not Found</h3>
-      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328912&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
+      <div class="thumb">
+        <img src="images/collections/col-5.jpg" alt="Breathe Motivation">
+      </div>
+      <h3>Breathe Motivation</h3>
+      <a class="view-btn" href="#">View Collection</a>
     </div>
+
     <div class="collection-card">
-      <img src="images/collections/col-6.jpg" alt="Collection 6">
+      <div class="thumb">
+        <img src="images/collections/col-6.jpg" alt="Stand Out Shark">
+      </div>
       <h3>Stand Out Shark</h3>
-      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328945&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
+      <a class="view-btn" href="#">View Collection</a>
     </div>
-   <!-- 7 -->
-<div class="collection-card">
-  <img src="images/collections/col-7.jpg" alt="Happy Birthday Legendary">
-  <h3>Happy Birthday (Legendary)</h3>
-  <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328996&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
-</div>
 
-<!-- 8 -->
-<div class="collection-card">
-  <img src="images/collections/col-8.jpg" alt="Resetting My Life">
-  <h3>Resetting My Life</h3>
-  <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4329022&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
-</div>
+    <div class="collection-card">
+      <div class="thumb">
+        <img src="images/collections/col-7.jpg" alt="Birthday Shark">
+      </div>
+      <h3>Birthday Shark</h3>
+      <a class="view-btn" href="#">View Collection</a>
+    </div>
 
-<!-- 9 -->
-<div class="collection-card">
-  <img src="images/collections/col-9.jpg" alt="Swim Deeper, Scream Louder">
-  <h3>Swim Deeper, Scream Louder</h3>
-  <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4331871&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
-</div>
+    <div class="collection-card">
+      <div class="thumb">
+        <img src="images/collections/col-8.jpg" alt="Resetting My Life">
+      </div>
+      <h3>Resetting My Life</h3>
+      <a class="view-btn" href="#">View Collection</a>
+    </div>
 
-<!-- 10 -->
-<div class="collection-card">
-  <img src="images/collections/col-10.jpg" alt="Earth Has No Barcode">
-  <h3>Earth Has No Barcode</h3>
-  <a class="view-btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4332076&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View Collection</a>
-</div>
+    <div class="collection-card">
+      <div class="thumb">
+        <img src="images/collections/col-9.jpg" alt="Swim Deeper, Scream Louder">
+      </div>
+      <h3>Swim Deeper, Scream Louder</h3>
+      <a class="view-btn" href="#">View Collection</a>
+    </div>
 
-  </div>
-</main>
+    <div class="collection-card">
+      <div class="thumb">
+        <img src="images/collections/col-10.jpg" alt="Earth Has No Barcode">
+      </div>
+      <h3>Earth Has No Barcode</h3>
+      <a class="view-btn" href="#">View Collection</a>
+    </div>
 
-<footer class="footer">
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <div>© <span id="y"></span> Megu Donni</div>
-    <div><a href="/">Home</a> · <a href="/store.html">Store</a> · <a href="/#contact">Contact</a></div>
-  </div>
-</footer>
-<script>document.getElementById('y').textContent=new Date().getFullYear()</script>
+  </main>
 
 </body>
 </html>
