--- a/index.html
+++ b/index.html
@@ -4,149 +4,101 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Megu Donni World | Fun Art, Stories, and Creative Adventures</title>
-
-  <meta name="description" content="Discover Megu Donni World, a colorful space filled with fun art, creative stories, and inspiring adventures for all ages.">
-  <meta name="keywords" content="Megu Donni, art, animation, sports, adventures, blue hair character">
-  <meta name="author" content="Megu Donni World">
-
-  <link rel="icon" href="images/logo.svg?v=2">
-
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
+  <title>Megu Donni World</title>
   <link rel="stylesheet" href="styles.css">
-
-  <style>
-    .product-card{border:1px solid #eee;border-radius:12px;padding:16px;text-align:center;background:#fff;box-shadow:0 2px 6px rgba(0,0,0,.05);max-width:240px;margin:10px;display:inline-block;vertical-align:top}
-    .product-card img{max-width:100%;border-radius:8px}
-    .product-card h3{font-size:16px;margin:10px 0 5px}
-    .product-card p{font-size:14px;color:#666}
-    .buy-btn{display:inline-block;margin-top:8px;padding:8px 12px;background:#ff4b4b;color:#fff;border-radius:6px;text-decoration:none;font-size:14px}
-    .buy-btn:hover{background:#e63c3c}
-  </style>
-
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://megudonniworld.netlify.app/">
-  <meta property="og:title" content="Megu Donni World | Fun Art, Stories, and Creative Adventures">
-  <meta property="og:description" content="Discover Megu Donni World, a colorful space filled with fun art, creative stories, and inspiring adventures for all ages.">
-  <meta property="og:image" content="https://megudonniworld.netlify.app/images/hero_megu.png">
-
-  <link rel="manifest" href="/manifest.json">
-  <meta name="theme-color" content="#111111">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-icon" href="/icons/icon-192.png">
-
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://megudonniworld.netlify.app/">
-  <meta property="twitter:title" content="Megu Donni World | Fun Art, Stories, and Creative Adventures">
-  <meta property="twitter:description" content="Discover Megu Donni World, a colorful space filled with fun art, creative stories, and inspiring adventures for all ages.">
-  <meta property="twitter:image" content="https://megudonniworld.netlify.app/images/hero_megu.png">
-
-  <script defer data-domain="megudonniworld.netlify.app" src="https://plausible.io/js/script.js"></script>
 </head>
-
 <body>
-  <header class="header">
-    <div class="container wrap">
-      <div class="brand">
-        <img src="images/logo.svg" alt="Megu Donni logo">
-        <strong>Megu Donni World</strong>
-      </div>
-      <nav class="nav">
-        <a href="#gallery">Gallery</a>
-        <a href="#episodes">Episodes</a>
-        <a href="store.html">Store</a>
-        <a href="#subscribe">Subscribe</a>
-        <a href="#contact">Contact</a>
-      </nav>
+
+<header>
+  <nav class="navbar">
+    <div class="logo"><a href="/">Megu Donni</a></div>
+    <ul class="nav-links">
+      <li><a href="#hero">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#gallery">Gallery</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="store.html">Store</a></li>
+    </ul>
+    <div class="menu-toggle">&#9776;</div>
+  </nav>
+</header>
+
+<section id="hero" class="hero">
+  <h1>Welcome to Megu Donni World</h1>
+  <p>Discover the adventures, art, and stories of Megu Donni.</p>
+</section>
+<!-- ABOUT -->
+<section id="about" class="section">
+  <div class="container">
+    <h2>About</h2>
+    <p>Megu Donni is a blue-haired dreamer turning everyday moments into playful art and stories.</p>
+  </div>
+</section>
+
+<!-- GALLERY -->
+<section id="gallery" class="section">
+  <div class="container">
+    <h2>Gallery</h2>
+    <div class="grid-3" style="margin-top:12px">
+      <img src="images/at_binici_small.png" alt="Megu Donni equestrian">
+      <img src="images/gallery_fencing.png" alt="Megu Donni fencing">
+      <img src="images/gallery_archaeologist.png" alt="Megu Donni archaeologist">
+      <img src="images/gallery_firefighter.png" alt="Megu Donni firefighter">
+      <img src="images/gallery_archery.png" alt="Megu Donni archery">
     </div>
-  </header>
+  </div>
+</section>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Welcome to Megu Donni World</h1>
-      <p>Step into the colorful world of Megu Donni, where imagination meets adventure.</p>
+<!-- SUBSCRIBE (Netlify Forms) -->
+<section id="subscribe" class="section">
+  <div class="container">
+    <h2>Subscribe</h2>
+    <p>Get new art and episode updates in your inbox.</p>
+    <form name="subscribe" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thanks/">
+      <input type="hidden" name="form-name" value="subscribe">
+      <p style="display:none"><label>Don’t fill this out: <input name="bot-field"></label></p>
+      <div style="display:flex; gap:8px; flex-wrap:wrap">
+        <input type="email" name="email" placeholder="you@example.com" required
+               style="flex:1; min-width:220px; padding:12px 14px; border-radius:10px; border:1px solid #ddd">
+        <button class="btn" type="submit">Subscribe</button>
+      </div>
+    </form>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="section">
+  <div class="container">
+    <h2>Contact</h2>
+    <p>For collaborations & licensing: <a href="mailto:megudonni@gmail.com">megudonni@gmail.com</a></p>
+    <p><em>Responses within 48 hours.</em></p>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="footer">
+  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
+    <div>© <span id="y"></span> Megu Donni</div>
+    <div>
+      <a href="#hero">Home</a> ·
+      <a href="#about">About</a> ·
+      <a href="#gallery">Gallery</a> ·
+      <a href="store.html">Store</a> ·
+      <a href="#subscribe">Subscribe</a> ·
+      <a href="#contact">Contact</a>
     </div>
-    <div class="hero-image">
-      <img src="images/hero_megu.png" alt="Megu Donni smiling in casual hoodie">
-    </div>
-  </section>
+  </div>
+</footer>
 
-  <main>
-    <section id="about" class="section about">
-      <div class="container">
-        <h2>About Megu Donni</h2>
-        <p>Megu Donni is a blue-haired dreamer who transforms everyday moments into extraordinary adventures. Whether she’s exploring ancient ruins, mastering new sports, or creating art, Megu brings a sense of wonder and creativity to everything she does. Her world is a place where imagination has no limits — and everyone is welcome to join the journey.</p>
-      </div>
-    </section>
+<!-- MOBILE MENU JS (hamburger) -->
+<script>
+  const toggle = document.querySelector('.menu-toggle');
+  const nav = document.querySelector('.nav-links');
+  if (toggle && nav) {
+    toggle.addEventListener('click', () => nav.classList.toggle('active'));
+  }
+  document.getElementById('y').textContent = new Date().getFullYear();
+</script>
 
-    <section id="gallery" class="section">
-      <div class="container">
-        <h2>Gallery</h2>
-        <div class="grid-3" style="margin-top:12px">
-          <img src="images/at_binici_small.png" alt="Megu Donni in an equestrian outfit holding a riding helmet">
-          <img src="images/gallery_fencing.png" alt="Megu Donni practicing fencing with a foil and mask">
-          <img src="images/gallery_archaeologist.png" alt="Megu Donni as an archaeologist restoring a clay pot">
-          <img src="images/gallery_firefighter.png" alt="Megu Donni dressed as a firefighter holding a hose">
-          <img src="images/gallery_archery.png" alt="Megu Donni aiming a bow and arrow in an action pose">
-        </div>
-      </div>
-    </section>
-
-    <section id="episodes" class="section">
-      <div class="container">
-        <h2>Episodes</h2>
-        <p>Coming soon: short animated episodes starring Megu Donni.</p>
-      </div>
-    </section>
-
-    <section id="subscribe" class="section">
-      <div class="container">
-        <h2>Subscribe</h2>
-        <p>Get new art and episode updates in your inbox.</p>
-        <form name="subscribe" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thanks/">
-          <input type="hidden" name="form-name" value="subscribe">
-          <p style="display:none">
-            <label>Don’t fill this out: <input name="bot-field"></label>
-          </p>
-          <div style="display:flex; gap:8px; flex-wrap:wrap">
-            <input type="email" name="email" placeholder="you@example.com" required style="flex:1; min-width:220px; padding:12px 14px; border-radius:10px; border:1px solid #ddd">
-            <button class="btn" type="submit">Subscribe</button>
-          </div>
-        </form>
-      </div>
-    </section>
-
-    <section id="contact" class="section">
-      <div class="container">
-        <h2>Contact</h2>
-        <p>For collaborations & licensing: <a href="mailto:megudonni@gmail.com">megudonni@gmail.com</a></p>
-        <p><em>Responses within 48 hours.</em></p>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-      <div>© <span id="y"></span> Megu Donni</div>
-      <div><a href="#gallery">Gallery</a> · <a href="#episodes">Episodes</a> · <a href="store.html">Store</a> · <a href="#subscribe">Subscribe</a></div>
-    </div>
-  </footer>
-
-  <footer style="text-align:center; padding: 20px; font-size: 14px; color: #666;">
-    <a href="/privacy.html">Privacy Policy</a> |
-    <a href="/terms.html">Terms & Conditions</a>
-  </footer>
-
-  <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
-  <script>
-    if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => {
-        navigator.serviceWorker.register("/service-worker.js");
-      });
-    }
-  </script>
 </body>
 </html>
-
-
-
