--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       data-netlify="true"
       netlify-honeypot="bot-field"
       action="/thanks/">
+      onsubmit="setTimeout(()=>{ location.href='/thanks/'; }, 150);">
   <input type="hidden" name="form-name" value="subscribe">
   <p style="display:none"><label>Don’t fill this out: <input name="bot-field"></label></p>
       <div style="display:flex; gap:8px; flex-wrap:wrap">
