--- a/index.html
+++ b/index.html
@@ -119,5 +119,9 @@
   document.getElementById('y').textContent = new Date().getFullYear();
 </script>
 
+  <form name="subscribe" netlify netlify-honeypot="bot-field" hidden>
+  <input type="email" name="email">
+</form>
+
 </body>
 </html>
