--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 <body>
 
 <header>
+  <!-- Sosyal Medya İkonları -->
+<div style="position: absolute; top: 10px; right: 20px; display: flex; gap: 10px;">
+  <a href="https://www.youtube.com/@MeguDonni" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" style="height:24px;">
+  </a>
+  <a href="https://www.tiktok.com/@megudonni" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/TikTok_logo.svg" alt="TikTok" style="height:24px;">
+  </a>
+  <a href="https://www.instagram.com/cutemegalodon/" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="height:24px;">
+  </a>
+  <a href="https://x.com/MeguDonni" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023_original.svg" alt="X (Twitter)" style="height:24px;">
+  </a>
+</div>
+
   <nav class="navbar">
     <div class="logo"><a href="/">Megu Donni</a></div>
     <ul class="nav-links">
