--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Megu Donni World</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
 </head>
 <body>
 
@@ -34,7 +35,13 @@
       <li><a href="#gallery">Gallery</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="store.html">Store</a></li>
-    </ul>
+    </ul> <div class="social-icons">
+  <a href="https://www.youtube.com/@MeguDonni" target="_blank" aria-label="YouTube" class="youtube"><i class="fa-brands fa-youtube"></i></a>
+  <a href="https://www.tiktok.com/@megudonni" target="_blank" aria-label="TikTok" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
+  <a href="https://www.instagram.com/cutemegalodon/" target="_blank" aria-label="Instagram" class="instagram"><i class="fa-brands fa-instagram"></i></a>
+  <a href="https://x.com/MeguDonni" target="_blank" aria-label="X" class="twitter"><i class="fa-brands fa-x-twitter"></i></a>
+</div>
+
     <div class="menu-toggle">&#9776;</div>
   </nav>
 </header>
