--- a/index.html
+++ b/index.html
@@ -127,10 +127,14 @@
       <a href="#gallery">Gallery</a> ·
       <a href="store.html">Store</a> ·
       <a href="#subscribe">Subscribe</a> ·
-      <a href="#contact">Contact</a>
+      <a href="#contact">Contact</a> ·
+      <!-- 👇 geri ekledik -->
+      <a href="/privacy.html">Privacy Policy</a> ·
+      <a href="/terms.html">Terms &amp; Conditions</a>
     </div>
   </div>
 </footer>
+
 
 <!-- MOBILE MENU JS (hamburger) -->
 <script>
